src/objects/JIRA_Plan__c.object
<CustomObject>
    <fields>
        <fullName>JIRAID__c</fullName>
        <externalId>true</externalId>
        <label>JIRAID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>JIRA_Feature__c</referenceTo>
        <relationshipLabel>JIRA Plans</relationshipLabel>
        <relationshipName>JIRA_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JIRA_Integrate_Actual__c</fullName>
        <label>Integrate Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JIRA_Integrate_Baseline__c</fullName>
        <label>Integrate Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JIRA_Integrate_CWV__c</fullName>
        <label>Integrate CWV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JIRA_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>JIRA Plans</relationshipLabel>
        <relationshipName>JIRA_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JIRA_Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Target_Stable_Release__c</fullName>
        <label>Target Stable Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JIRA Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JIRA Plan  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>